fixning background-image not showing on mobile phone

--- a/assets/css/fttg_style.css
+++ b/assets/css/fttg_style.css
@@ -11555,9 +11555,9 @@ pre .code {
   .header {
     height: 500px;
     min-height: 500px;
-    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/femi_avatar.jpg);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/femi_avatar.jpg);
-    background-size: auto;
+    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/femi_banner_mobile.jpg);
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/femi_banner_mobile.jpg);
+    background-size: cover;
   }
   .header .social-icons {
     margin: auto;
